use java8 base64